--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_polyline_points: ^2.1.0
   http: ^1.3.0
   shared_preferences: ^2.5.2
+  live_currency_rate: ^1.0.8
 
 dev_dependencies:
   flutter_test:
